# pruebas-integracion-sistema

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  INFORME.md  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pipeline.yml  tests.yml
src/carrito/: api.py  carrito.py  modelos.py
src/database/: config.py  models.py  repositorio.py
src/envios/: calculadora_envio.py
tests/: conftest.py  test_carrito.py  test_funcional.py  test_tabla_decision.py
tests/features/: carrito.feature  test_carrito_bdd.py
tests/integration/: test_api_integracion.py  test_repositorio_db.py
tests/performance/: locustfile.py
tests/security/: test_seguridad_api.py
tests/system/: test_sistema_e2e.py
