[project]
name = "carrito-compras"
version = "0.1.0"
description = "Sistema de carrito de compras - Práctica TDD y BDD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-bdd>=8.1.0",
    "locust>=2.44.0",
    "httpx>=0.27",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
bdd_features_base_dir = "tests/features/"
pythonpath = ["."]
markers = [
    "smoke: tests rápidos que verifican funcionalidad básica",
    "regression: tests que detectan regresiones en funcionalidad existente",
    "critical: tests de funcionalidades cruciales para el negocio",
    "carrito: todos los tests del módulo carrito",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "if __name__ == '__main__':",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
